--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <title>Mixed Message</title>
   </head>
   <body>
-    <div id="background">
+    <div
+      id="background"
+      style="background-image: url('/pexels-veeterzy-303383.jpg')"
+    >
       <div class="main-div">
         <div class="content">
           <h3>Quote Generator</h3>
